# 3DConvexHull

./: .codacy.yml  .gitmodules  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  staticAnalysis.sh
docs/html/: annotated.html  class_window-members.html  class_window.html  classes.html  classmat4-members.html  classmat4.html  dir_4dad9f576b01f3eb79c242c108d84d53.html  dir_59425e443f801f1f2fd8bbe4959a3ccf.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_89a953e969bebe1af0bcb31d1e92bf3f.html  files.html  functions.html  functions_func.html  hull_8hpp_source.html  index.html  mat_8hpp_source.html  menudata.js  namespace_hull.html  namespacemembers.html  namespacemembers_func.html  namespaces.html  struct_hull_1_1_snork-members.html  struct_hull_1_1_snork.html  struct_hull_1_1_triangle-members.html  struct_hull_1_1_triangle.html  window_8hpp_source.html
docs/html/search/: all_0.js  all_2.js  all_3.js  all_4.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  classes_0.js  classes_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_7.js  functions_9.js  pages_0.js  searchdata.js
src/: CMakeLists.txt  geometry.hpp  hull.cpp  hull.hpp  main.cpp  mat.hpp  model.cpp  model.hpp  shader.cpp  shader.hpp  vec.hpp  window.cpp  window.hpp
tests/: CMakeLists.txt
tests/hull/: CMakeLists.txt  hullTest.cpp
tests/math/: CMakeLists.txt  mathTest.cpp
